# postino

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml  verify.yml
debian/: changelog  control  copyright  il-postino.manpages  il-postino.service  links  postinst  postrm  requirements-deb.txt  rules
docker/postinod/: Dockerfile
docs/: ROADMAP.md  postino-mlmmj.md
docs/man/: postino.1.h2m  postinod.8.in
docs/superpowers/specs/: 2026-05-09-postino-design.md  2026-05-10-postino-stack-design.md
man/: postino.1  postinod.8
pkg/: manifest.json.in  postino.toml.sample  postinod.rc
scripts/: build-deb.sh  build-manpages.sh  build-txz.sh  check.sh  ci-watch.sh  fix.sh  release.sh  test-mlmmj.sh
src/postino/: __init__.py  __main__.py  cli.py  exit.py  output.py
src/postino/commands/: alias.py  check.py  config.py  domain.py  list.py  quota.py  reconcile.py  schema.py  status.py  user.py
src/postino_core/: __init__.py  audit.py  config.py  config_errors.py  db.py  enums.py  errors.py  fs.py  hooks.py  models.py  output.py  password.py  quota.py
src/postino_core/adapters/: __init__.py  mlmmj.py
src/postino_core/check/: consistency.py  types.py
src/postino_core/config_gen/: __init__.py  fix.py  generator.py  input.py  preflight.py  templates.py
src/postino_core/config_gen/templates/: dovecot_20_lmtp.conf.j2  dovecot_auth_sql.conf.ext.j2  dovecot_postino.conf.j2  dovecot_sql.conf.ext.j2  main.cf.j2  (+8 more)
src/postino_core/providers/: __init__.py  base.py  hybrid.py  local.py  noauth.py
src/postino_core/repos/: routes.py
src/postino_core/services/: alias.py  alias_domain.py  bundle.py  domain.py  mailbox.py  mailing_list.py  quota.py  status.py
src/postinod/: __init__.py  __main__.py  app.py  audit.py  config.py  health.py
src/postinod/auth/: __init__.py  hmac_guard.py  jwks.py  jwt_guard.py
src/postinod/scim/: aliases.py  discovery.py  domains.py  errors.py  models.py  query.py  users.py
src/postinod/zitadel/: events.py  mapping.py  models.py
tests/: conftest.py
tests/architecture/: allowlist.toml  conftest.py  test_layer_boundaries.py  test_manpage_lint.py  test_manpages_in_sync.py  test_no_any.py  test_no_bare_dict.py  test_no_cast.py  test_no_empty_str_sentinel.py  test_no_getpass_in_core.py  test_no_secret_repr.py  test_no_str_dispatch.py  test_postinod_isolation.py  test_postinod_scim_no_password_leak.py  test_postinod_zitadel_no_password.py  test_pydantic_strict.py  test_type_ignore_justified.py
tests/cli/: test_alias_cmd.py  test_check_cmd.py  test_config_fix_cli.py  test_config_gen_cli.py  test_domain_alias_cmd.py  test_domain_cmd.py  test_global_flag_position.py  test_global_flags.py  test_help_epilogs.py  test_list_cmd.py  test_status_cmd.py  test_user_add.py  test_user_cmd.py  test_user_passwd.py
tests/e2e_cli/: conftest.py  test_cli_e2e.py  test_cli_list_e2e.py  test_cli_write_e2e.py
tests/fakes/: identity.py
tests/fixtures/: postfixadmin.sql  sample_sql-virtual_mailbox_maps.cf
tests/fixtures/config_gen/: master.cf.golden
tests/fixtures/grants/: all_privileges_global.txt  all_privileges_on_db.txt  db_star_select_only.txt  exact_required.txt  missing_insert_on_mailbox.txt  no_scope_for_db.txt  proxy_grant_ignored.txt  role_grant_ignored.txt
tests/integration/: _schema_helpers.py  test_alias_domain_service.py  test_alias_service.py  test_audit_log.py  test_check.py  test_check_db_grants.py  test_cli_config_errors.py  test_config_gen_roundtrip.py  test_domain_service.py  test_local_provider.py  test_mailbox_release.py  test_mailbox_service.py  test_mailing_list_service.py  test_noauth_provider.py  test_provider_conformance.py  test_quota_service.py  test_routes_repository.py  test_schema_migrate.py  test_schema_version_migration.py  test_settings_precedence.py  test_status_service.py
tests/postinod/: conftest.py
tests/postinod/integration/: conftest.py  test_app_lifecycle.py  test_scim_aliases.py  test_scim_lists.py  test_scim_password.py  test_scim_users.py  test_zitadel_router.py
tests/postinod/unit/: test_config.py  test_health.py  test_hmac_guard.py  test_jwks_cache.py  test_jwt_guard.py  test_scim_discovery.py  test_scim_error_mapping.py  test_scim_models.py  test_zitadel_mapping.py  test_zitadel_models.py
tests/postinod_e2e/lists/: Dockerfile.agent  Dockerfile.mta  conftest.py  docker-compose.yml  postino.toml  seed.sql  test_list_e2e.py
tests/postinod_e2e/scim/: .gitignore  conftest.py  docker-compose.yml  postino.toml  seed.sql  test_scim_e2e.py
tests/unit/: test_app_guard.py  test_argv_shuffle.py  test_bundle_hybrid_dispatch.py  test_cli_clock.py  test_cli_schema.py  test_cli_user_passwd_claim.py  test_cli_user_release.py  test_config_errors.py  test_config_fix_apply.py  test_config_fix_detect.py  test_config_fix_diff.py  test_config_gen_dovecot_layout.py  test_config_gen_generator.py  test_config_gen_input.py  test_config_gen_input_v013.py  test_config_gen_master_cf_golden.py  test_config_gen_mlmmj_off.py  test_config_gen_templates.py  test_config_parser.py  test_consistency_db_grants.py  test_consistency_grants_parser.py  test_consistency_master_cf_pipes.py  test_consistency_orchestrator.py  test_consistency_passdb_chain.py  test_consistency_postcreation_hook_syntax.py  test_consistency_recipient_delimiter.py  test_consistency_transport_maps.py  test_consistency_vmail_identity.py  test_db.py  test_dovecot_passdb_parser.py  test_enums.py  test_errors.py  test_exit_codes.py  test_fake_identity.py  test_fs.py  test_hooks.py  test_hybrid_provider.py  test_local_provider.py  test_mailing_list_service.py  test_mlmmj_adapter.py  (+8 more)
tests/unit/repos/: test_routes.py
(+10 files in other folders)
