[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "il-postino"
version = "0.1.0"
description = "Typed Python CLI for administering Postfix + Dovecot mail servers (PostfixAdmin schema). Pluggable identity backend."
readme = "README.md"
license = "MIT"
authors = [{ name = "Marcello Barnaba", email = "marcello.barnaba@gmail.com" }]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.2",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "passlib>=1.7",
    "bcrypt>=4.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-freezer>=0.4",
    "pyright>=1.1.370",
    "ruff>=0.5",
]

[project.scripts]
postino = "postino.cli:app"

[project.urls]
Homepage = "https://github.com/vjt/postino"
Issues = "https://github.com/vjt/postino/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/postino", "src/postino_core"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "scripts/",
    "docs/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "RUF",
    "SIM",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"
markers = [
    "integration: tests that require POSTINO_TEST_DB_URL",
    "cli: end-to-end CLI tests",
]
