[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "il-postino"
version = "0.3.0"
description = "Typed Python CLI for administering Postfix + Dovecot mail servers (PostfixAdmin schema). Pluggable identity backend."
readme = "README.md"
license = "MIT"
authors = [{ name = "Marcello Barnaba", email = "marcello.barnaba@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.2",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "passlib>=1.7",
    "bcrypt>=4.0,<5",
]

[project.optional-dependencies]
cli = []  # postino CLI deps already in project.dependencies; reserved for future split
daemon = [
    "litestar>=2.13,<3",
    "uvicorn>=0.30",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-freezer>=0.4",
    "pyright>=1.1.370",
    "ruff>=0.5",
    "import-linter>=2.0",
    # postinod test deps — pulled in via `pip install -e .[dev,daemon]`
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
postino = "postino.cli:app"

[project.urls]
Homepage = "https://github.com/vjt/postino"
Issues = "https://github.com/vjt/postino/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/postino", "src/postino_core", "src/postinod"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "scripts/",
    "docs/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "RUF",
    "SIM",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q -m 'not e2e'"
asyncio_mode = "auto"
markers = [
    "integration: tests that require POSTINO_TEST_DB_URL",
    "cli: end-to-end CLI tests",
    "architecture: static rule checks under tests/architecture",
    "e2e: end-to-end tests that require Docker",
]

[tool.importlinter]
root_packages = ["postino_core", "postino", "postinod"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture: postino_core < postino, postinod"
type = "layers"
layers = [
    "postino | postinod",
    "postino_core",
]
containers = []
exhaustive = false
ignore_imports = []

[[tool.importlinter.contracts]]
name = "postino_core stays free of UI/CLI/HTTP dependencies"
type = "forbidden"
source_modules = ["postino_core"]
forbidden_modules = ["typer", "rich", "click", "litestar", "httpx", "jwt"]

[[tool.importlinter.contracts]]
name = "postino CLI must not import HTTP/daemon stack or postinod"
type = "forbidden"
source_modules = ["postino"]
forbidden_modules = ["litestar", "httpx", "jwt", "postinod"]

[[tool.importlinter.contracts]]
name = "postinod must not import the postino CLI"
type = "forbidden"
source_modules = ["postinod"]
forbidden_modules = ["postino", "typer", "rich"]
